--- a/intasc/intasc1.html
+++ b/intasc/intasc1.html
@@ -51,7 +51,7 @@
                 opportunity while others struggle and need a lot of personal attention.</p>
         </div>
 
-        <section class="intasc grid">
+        <section class="intasc grid3">
             <div class="box intasc">
                 <h2>Scaffolding Computer Science</h2>
                 <p>Computer Science – Programming in C# was an introductory computer programming class for many
