--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -7,12 +7,11 @@
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="../img/education_icon.ico" rel="icon" type="image/x-icon">
     <script src="../script/subnav.js"></script>
-    <script src="../script/background.js"></script>
     <title>InTASC Standard #2</title>
 </head>
 
 <body>
-    <section class="school inglemoor intasc">
+    <section class="school pine intasc">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
@@ -41,12 +40,295 @@
 
         <div class="box intasc">
             <blockquote class="italics">The teacher uses understanding of individual differences and diverse cultures
-                and communities to ensure
-                inclusive learning environments that enable each learner to meet high standards.</blockquote>
+                and communities to ensure inclusive learning environments that enable each learner to meet high
+                standards.</blockquote>
 
             <p>Students have different ways of learning and different learning goals. By giving students a choice of
-                assignments to meet the learning object and choice in how they complete it, the learning objective is
+                assignments to meet the learning objective and choice in how they complete it, the learning objective is
                 contextualized to meet their needs and interests.</p>
+        </div>
+
+        <section class="intasc grid2">
+            <img src="../img/Choice Activity.png">
+            <img src="../img/Choice Project.png">
+
+            <div>
+                <div class="box intasc">
+                    <h2>Choice Activity for Paying for College Unit of Finance</h2>
+                    <p>Students were given their choice of activity:</p>
+                    <ul>
+                        <li>Submit Your FAFSA Application</li>
+                        <li>Apply to Community College</li>
+                        <li>Deep Dive: School of Interest</li>
+                    </ul>
+                    <h2>Choice Activity</h2>
+                    <p><strong>Due: Friday, March 28, 2025 at 11:59 pm</strong></p>
+                    <p>For this activity, you have a choice of activities:</p>
+                    <ul>
+                        <li>If you haven't already, fill out the FAFSA, and attach a screenshot of your submitted form
+                            or an
+                            email verification. You may need your parents to fill out their part before you turn it in,
+                            but
+                            you can get started in class creating an account, looking up college numbers, and filling
+                            out
+                            your part.</li>
+                        <li>Apply to any - or as many! - community colleges as you wish. It's free to apply! Attach
+                            confirmation of your application.</li>
+                        <li>Research a college of interest to you, and submit this information: tuition, fees, and
+                            expenses,
+                            net price calculation, percentage admission rate, percentage graduation rate, national or
+                            regional ranking, and the program you are interested in. Investigate what housing options
+                            interest you and what the cost would be.</li>
+                    </ul>
+                    <p>Report out on what you did to the group. This can count for your group discussion participation.
+                    </p>
+                    <p>Posted&nbsp;Tue Mar 25, 2025 at 8:58 pm</p>
+                    <p><a href="https://studentaid.gov/"><strong>Submit Your FAFSA Application</strong></a><strong>
+                        </strong>(link to FAFSA; submit screenshot when complete)</p>
+                    <p><a href="https://apply.ctc.edu/user"><strong>Apply to Community College</strong></a><strong>
+                        </strong></p>
+                    <p>(link to admissions portal for WA State Community &amp; Technical Colleges; submit screenshot
+                        when
+                        complete)</p>
+                    <p><strong>Deep Dive: School of Interest</strong></p>
+                    <p>Name of a school that interests you, and the URL:</p>
+                    <p>Tuition, fees, expenses:</p>
+                    <p>Net price calculation:</p>
+                    <p>Percentage admission rate:</p>
+                    <p>Percentage graduation rate:</p>
+                    <p>Transfer Equivalency Guide URL:</p>
+                    <p>National or Regional Ranking</p>
+                    <ul>
+                        <li>This is often on the school&rsquo;s website</li>
+                        <li>Check out ranking on US News and World Report: <a
+                                href="https://www.usnews.com/best-colleges/rankings/national-universities">https://www.usnews.com/best-colleges/rankings/national-universities</a>
+                        </li>
+                        <li>Google the ranking of your degree program to see if there is some organization ranking
+                            schools.
+                        </li>
+                    </ul>
+                    <p>Regional Accreditation:</p>
+                    <p>Program Accreditation:</p>
+                    <p>Housing Options</p>
+                    <ul>
+                        <li>On-campus residence halls</li>
+                        <li>Greek system (fraternities &amp; sororities)</li>
+                        <li>Off-campus apartments</li>
+                        <li>Living with family</li>
+                    </ul>
+                    <p>What costs are involved and what interests you?</p>
+                    <p>What meal options work for you?</p>
+                    <ul>
+                        <li>Meal plan at residence hall</li>
+                        <li>Meals at fraternity/sorority house</li>
+                        <li>Buy groceries and cook for yourself at an apartment</li>
+                        <li>Fast food</li>
+                        <li>Living with family</li>
+                    </ul>
+                </div>
+                <img src="../img/FAFSA.png">
+                <embed src="trade school.pdf" type="application/pdf" width="100%" height="1000px"
+                    title="Embedded PDF Document">
+            </div>
+
+            <div>
+                <div class="box intasc">
+                    <h2>Choice Project from Paying for College unit of Finance</h2>
+                    <p>Students were given their choice of Project:</p>
+                    <ul>
+                        <li>The School I Chose</li>
+                        <li>Campus Visits</li>
+                        <li>Programs at a Trade School / Technical College</li>
+                    </ul>
+                </div>
+                <div class="box intasc">
+                    <h2>The School I Chose</h2>
+                    <p><strong>Due: Friday, April 4, 2025 at 11:59 pm</strong></p>
+                    <p>This could be any school, college, university, or trade school.</p>
+                    <p>In the unit&nbsp;<strong> Deep Dive: Deciding Where to Go to School</strong>&nbsp;you may have
+                        completed this choice activity:&nbsp;Deep Dive: School of Interest</p>
+                    <p>Start with that information and write a report on the school you finally picked (or your current
+                        top
+                        contender). If you didn't do that choice activity, you can do it now because you will need that
+                        information in your report:</p>
+                    <ul>
+                        <li>Name of the school</li>
+                        <li>Tuition, fees, expenses</li>
+                        <li>Net price calculation</li>
+                        <li>What you plan to do for housing and meals</li>
+                        <li>Percentage admission rate</li>
+                        <li>Percentage graduation rate</li>
+                        <li>Your degree program</li>
+                        <li>National or Regional Ranking</li>
+                        <li>Regional Accreditation</li>
+                        <li>Program Accreditation</li>
+                    </ul>
+                    <p>Add to that an essay on:</p>
+                    <ul>
+                        <li>What attracted you to the school</li>
+                        <li>At least three positive things about the school that influenced your decision</li>
+                        <li>At least one negative thing you also considered</li>
+                        <li>Your experience at a campus visit, if you had one. If not, are you planning to visit? When?
+                        </li>
+                        <li>Did you meet with any current students? What questions did you ask? If not, what questions
+                            would
+                            you ask?</li>
+                        <li>What clubs, sports, organizations, or other extra-curricular activities do you plan to do?
+                            If
+                            you met with any of the coaches, members, or staff during your visit, talk about what you
+                            got
+                            out of it.</li>
+                        <li>Did you attend a sports event or other activity during a campus visit?</li>
+                        <li>PHOTOS! Pictures of campus, pictures of you on campus, pictures of you in the school
+                            sweatshirt
+                            standing in front of a big sign with the name, or anything like that to give us a feel for
+                            what
+                            it is like at the school.</li>
+                    </ul>
+                    <p>You can do this all in a Word or Google doc, but I would love to see PowerPoint presentations.
+                    </p>
+                    <p>We will have time to do this in class this week. It is not due until Friday.</p>
+                </div>
+                <div class="box intasc">
+                    <h2>Campus Visits</h2>
+                    <p><strong>&nbsp;</strong><strong>Due: Friday, April 4, 2025 at 11:59 pm</strong></p>
+                    <p><strong>&nbsp;</strong>Write a report on your experience visiting college, university, or trade
+                        school campuses.</p>
+                    <p>Your report should include this info:</p>
+                    <ul>
+                        <li>What schools did you visit?</li>
+                        <li>Where is each one located?</li>
+                        <li>What were your positive and negative impressions after each visit?</li>
+                        <li>What did you learn about your degree program that you didn't already know? How did that
+                            impact
+                            your decision?</li>
+                        <li>Did you meet current students and what questions did they answer for you?</li>
+                        <li>What extra-curricular activities at each school interest you?</li>
+                        <li>Did you attend any sports events or other events?</li>
+                        <li>Describe the surrounding area of each school and how that influences your decision.</li>
+                        <li>What sites did you see while you were there?</li>
+                    </ul>
+                    <p>You can do this all in a Word or Google doc, but I would love to see PowerPoint presentations.
+                    </p>
+                    <p>We will have time to do this in class this week. It is not due until Friday.</p>
+                </div>
+                <div class="box intasc">
+                    <h2>Programs at a Trade School / Technical College</h2>
+                    <p><strong>Due: Friday, April 4, 2025 at 11:59 pm</strong></p>
+                    <p>Write a report on all the programs available at a trade school of your choice.</p>
+                    <ul>
+                        <li>Name of the school</li>
+                        <li>Tuition, fees, expenses</li>
+                        <li>Net price calculation</li>
+                        <li>Percentage admission rate</li>
+                        <li>Percentage graduation rate</li>
+                    </ul>
+                    <p>Your report should include all the programs that the school offers that lead to a career. What is
+                        unique about each school? For each program, list:</p>
+                    <ul>
+                        <li>Name of the program</li>
+                        <li>Certificate or Degree?</li>
+                        <li>How long to complete?</li>
+                        <li>What is the expected salary of graduates?</li>
+                    </ul>
+                    <p>You may pick&nbsp;any&nbsp;school, but here is a list of local schools that I came up with:</p>
+                    <table width="525">
+                        <tbody>
+                            <tr>
+                                <td width="268">
+                                    <p>Bates Technical College</p>
+                                </td>
+                                <td width="188">
+                                    <p><a href="https://www.batestech.edu/">https://www.batestech.edu/</a></p>
+                                </td>
+                                <td width="69">
+                                    <p>Tacoma</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <p>Clover Park Technical College</p>
+                                </td>
+                                <td>
+                                    <p><a href="https://www.cptc.edu/">https://www.cptc.edu/</a></p>
+                                </td>
+                                <td>
+                                    <p>Puyallup</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <p>Green River College</p>
+                                </td>
+                                <td>
+                                    <p><a href="https://www.greenriver.edu/">https://www.greenriver.edu/</a></p>
+                                </td>
+                                <td>
+                                    <p>Auburn</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <p>Lake Washington Institute of Technology</p>
+                                </td>
+                                <td>
+                                    <p><a href="http://www.lwtech.edu/">http://www.lwtech.edu</a></p>
+                                </td>
+                                <td>
+                                    <p>Bothell</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <p>Pima Medical Institute</p>
+                                </td>
+                                <td>
+                                    <p><a href="https://pmi.edu/">https://pmi.edu/</a></p>
+                                </td>
+                                <td>
+                                    <p>Seattle</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <p>Renton Technical College</p>
+                                </td>
+                                <td>
+                                    <p><a href="https://rtc.edu/">https://rtc.edu/</a></p>
+                                </td>
+                                <td>
+                                    <p>Renton</p>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p>Feel free to pick any school, or a different school not on the list.</p>
+                    <p>You can do this all in a Word or Google doc, but I would love to see PowerPoint presentations.
+                    </p>
+                    <p>We will have time to do this in class this week. It is not due until Friday.</p>
+                </div>
+            </div>
+        </section>
+        <div class="box">
+            <iframe
+                src="https://docs.google.com/presentation/d/1gW5I1wlVp6r9qfiOxu-cElBi1ciIDgvztkJZdpNFs4Q/edit?usp=sharing"
+                frameborder="0" width="1500" height="890" allowfullscreen="true" mozallowfullscreen="true"
+                webkitallowfullscreen="true">
+            </iframe>
+        </div>
+        <div class="box">
+            <iframe
+                src="https://docs.google.com/presentation/d/1gvxAGLWaszIcScLCFjG39bNE_v71tkUBmr-idutmTkE/edit?usp=sharing"
+                frameborder="0" width="1500" height="890" allowfullscreen="true" mozallowfullscreen="true"
+                webkitallowfullscreen="true">
+            </iframe>
+        </div>
+        <div class="box">
+            <iframe
+                src="https://docs.google.com/presentation/d/1Zr6RAumHoJsFIzcvYzwHEd9Ei911qBeK0dMlhWXT6HA/edit?usp=sharing"
+                frameborder="0" width="1500" height="890" allowfullscreen="true" mozallowfullscreen="true"
+                webkitallowfullscreen="true">
+            </iframe>
         </div>
     </section>
 </body>
