styling adjustments and change of backgrounds

--- a/intasc/intasc1.html
+++ b/intasc/intasc1.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
 
-        <h1>InTASC Standard #1<br>Learner Development</h1>
+        <h1 class="intasc">InTASC Standard #1<br>Learner Development</h1>
 
         <div class="box intasc">
             <blockquote class="italics">The teacher understands how learners grow and develop, recognizing that patterns
