--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
 
-        <h1>InTASC Standard #10<br>Leadership and Collaboration</h1>
+        <h1 class="intasc">InTASC Standard #10<br>Leadership and Collaboration</h1>
 
         <div class="box intasc">
             <blockquote class="italics">The candidate seeks appropriate leadership roles and opportunities to take
