--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
 
-        <h1>InTASC Standard #2<br>Learning Differences</h1>
+        <h1 class="intasc">InTASC Standard #2<br>Learning Differences</h1>
 
         <div class="box intasc">
             <blockquote class="italics">The teacher uses understanding of individual differences and diverse cultures
