--- a/intasc/intasc4.html
+++ b/intasc/intasc4.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
 
-        <h1>InTASC Standard #4<br>Content Knowledge</h1>
+        <h1 class="intasc">InTASC Standard #4<br>Content Knowledge</h1>
 
         <div class="box intasc">
             <blockquote class="italics">The teacher understands the central concepts, tools of inquiry, and structures
