--- a/intasc/intasc5.html
+++ b/intasc/intasc5.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
 
-        <h1>InTASC Standard #5<br>Content Application</h1>
+        <h1 class="intasc">InTASC Standard #5<br>Content Application</h1>
 
         <div class="box intasc">
             <blockquote class="italics">The candidate understands how to connect concepts and use differing perspectives
