--- a/intasc/intasc6.html
+++ b/intasc/intasc6.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
 
-        <h1>InTASC Standard #6<br>Assessment</h1>
+        <h1 class="intasc">InTASC Standard #6<br>Assessment</h1>
 
         <div class="box intasc">
             <blockquote class="italics">The candidate understands and uses multiple methods of assessment to engage
