--- a/intasc/intasc7.html
+++ b/intasc/intasc7.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
 
-        <h1>InTASC Standard #7<br>Instructional Planning</h1>
+        <h1 class="intasc">InTASC Standard #7<br>Instructional Planning</h1>
 
         <div class="box intasc">
             <blockquote class="italics">The candidate plans instruction that supports every student in meeting rigorous
