--- a/intasc/intasc8.html
+++ b/intasc/intasc8.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
 
-        <h1>InTASC Standard #8<br>Instructional Strategies</h1>
+        <h1 class="intasc">InTASC Standard #8<br>Instructional Strategies</h1>
 
         <div class="box intasc">
             <blockquote class="italics">The candidate understands and uses a variety of instructional strategies to
