--- a/intasc/intasc9.html
+++ b/intasc/intasc9.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
 
-        <h1>InTASC Standard #9<br>Professional Learning and Ethical Practice</h1>
+        <h1 class="intasc">InTASC Standard #9<br>Professional Learning and Ethical Practice</h1>
 
         <div class="box intasc">
             <blockquote class="italics">The candidate engages in ongoing professional learning and uses evidence to
