--- a/pages/resume.html
+++ b/pages/resume.html
@@ -7,11 +7,12 @@
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="../img/education_icon.ico" rel="icon" type="image/x-icon">
     <script src="../script/subnav.js"></script>
+    <script src="../script/background.js"></script>
     <title>Resume</title>
 </head>
 
 <body>
-    <section class="pine">
+    <section class="cwu grid1">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
