added intasc 3 & 4, fixed some styling issues

--- a/intasc/intasc3.html
+++ b/intasc/intasc3.html
@@ -7,12 +7,11 @@
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="../img/education_icon.ico" rel="icon" type="image/x-icon">
     <script src="../script/subnav.js"></script>
-    <script src="../script/background.js"></script>
     <title>InTASC Standard #3</title>
 </head>
 
 <body>
-    <section class="school inglemoor intasc">
+    <section class="school leaf intasc">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
@@ -38,14 +37,55 @@
         </nav>
 
         <h1 class="intasc">InTASC Standard #3<br>Learning Environments</h1>
-
         <div class="box intasc">
-            <blockquote class="italics">The teacher works with others to create environments that support individual and
-                collaborative learning, and that encourage positive social interaction, active engagement in learning,
+            <blockquote class="italics">The teacher works with others to create environments that support individual
+                and
+                collaborative learning, and that encourage positive social interaction, active engagement in
+                learning,
                 and self motivation.</blockquote>
 
-            <p>text needed Environments.</p>
+            <p>This standard is about building an environment that is conducive to learning. Expectations are high.
+                Students feel safe; students work together collaboratively and the interactions are respectful.
+                Students with learning differences get the support they need.</p>
+            <p>The artifacts below are some of the ways in which I met this standard:</p>
+            <ul>
+                <li>"Human Bingo" Icebreaker for the first day of Personal Finance class. There were two versions of
+                    the Bingo form, passed out randomly to the students. Students went around talking to each other
+                    to collect signatures on their form. This icebreaker idea was shamelessly stolen from our own
+                    cohort icebreaker last summer.</li>
+                <li>History of Computer Science discussion questions. Students counted off into four groups by
+                    powers of 2 (2, 4, 8, 16 - hey, it's computer science class). Groups met after a PowerPoint
+                    presentation to discuss their answers. Artifacts are three example student submissions.</li>
+                <li>Personal Finance class: Paying for College Unit: lesson on FAFSA: "ANALYZE: A FAFSA Submission
+                    Summary" assignment made available in English and Spanish. A sizeable number of the students in
+                    that class were Hispanic.</li>
+                <li>Hunt the Wumpus Group Assignments spreadsheet. Students worked together to create their group's
+                    version of the "Hunt the Wumpus" game as part of a competition sponsored by Microsoft. Microsoft
+                    volunteer advisors came two days a week to explain the requirements and assist the students.
+                </li>
+            </ul>
         </div>
+
+        <section class="intasc grid2">
+
+            <embed src="Human Bingo.pdf" type="application/pdf" width="800px" height="1000px"
+                title="Embedded PDF Document">
+
+            <embed src="History of Computer Science Group Discussion Questions.pdf" type="application/pdf" width="800px"
+                height="1000px" title="Embedded PDF Document">
+
+            <iframe src="https://docs.google.com/document/d/1vZ_wLhk6d91G0dWjN1TxRIoiOxVg-4N5ETtPT69OrGw/edit?tab=t.0"
+                width="800px" height="1000px" allowfullscreen></iframe>
+
+            <iframe
+                src="https://docs.google.com/document/d/17nf6BGv8pPKPw0aUzA05JRCGGNGE-QC_kOnnBuEtb8I/edit?tab=t.0#heading=h.ahrdbzpn0yaq"
+                width="800px" height="1000px" allowfullscreen></iframe>
+        </section>
+
+
+        <iframe
+            src="https://docs.google.com/spreadsheets/d/1YZTxqNx6rswe41J9zWqH-Qm2-k6Q6pDpUU9mFVk7wSk/edit?usp=sharing"
+            width="1200" height="800" allowfullscreen></iframe>
     </section>
 </body>
 
