--- a/intasc/intasc4.html
+++ b/intasc/intasc4.html
@@ -7,12 +7,11 @@
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="../img/education_icon.ico" rel="icon" type="image/x-icon">
     <script src="../script/subnav.js"></script>
-    <script src="../script/background.js"></script>
     <title>InTASC Standard #4</title>
 </head>
 
 <body>
-    <section class="school cwu intasc">
+    <section class="school pine intasc">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
@@ -44,8 +43,44 @@
                 of the discipline(s) he or she teaches and creates learning experiences that make the discipline
                 accessible and meaningful for learners to assure mastery of the content.</blockquote>
 
-            <p>text needed Content Knowledge.</p>
+            <p>This standard is self-explanitory: I'm expected to be an expert in the content I teach. I demonstrate my
+                knowledge and skills through lectures that are comprehensible and expand a student's knowledge,
+                easy-to-follow demonstrations, answering questions, and mentoring students.</p>
+            <p>My field is computer science, so just as important is transmitting the skill to seek out knowledge and
+                apply it. IT moves so fast that no one can possibly know it all - certainly not me - so beyond the
+                basics, the real skill needed in industry isn't what you know but how fast you can learn. I transmit
+                this skill by honestly answering, when appropriate, "I don't know, let's find out" and assisting a
+                student researching a topic or technique.</p>
+            <p>The artifacts demonstrating my content knowledge are:</p>
+            <ul style="list-style-type: disc;">
+                <li>This very website! I teach HTML and this portfolio website was written manually, not with a tool.
+                    I'm teaching it now, Summer 2025, as I'm creating this portfolio. My students are required to create
+                    a website as their final project for the quarter, so it's been fun to show them my final project as
+                    I'm creating it. My students have access to the source code: <a
+                        href="https://github.com/GaryMalk/portfolio" target="_blank"
+                        rel="noopener">https://github.com/GaryMalk/portfolio</a>&nbsp;</li>
+                <li>The CS Toolkit I created as an assignment for the CWU MAT tech class: <a
+                        href="https://garymalk.github.io/CSToolkit" target="_blank"
+                        rel="noopener">https://garymalk.github.io/CSToolkit</a>. Again, written by hand, with special
+                    care to make the whole site demonstrable of the coding techniques I teach my students in the HTML
+                    class. Students have access to the source code: <a href="https://github.com/GaryMalk/CSD112"
+                        target="_blank" rel="noopener">https://github.com/GaryMalk/CSD112</a></li>
+                <li>History of Computer Science PowerPoint presentation saved as a PDF</li>
+                <li>Programming Loops and Counters PowerPoint presentation saved as a PDF</li>
+                <li>Personal Finance class: Paying for College unit: Paying for College Part I PowerPoint presentation
+                    saved as a PDF</li>
+            </ul>
         </div>
+
+        <section class="intasc grid1">
+            <embed src="History of Computer Science.pdf" type="application/pdf" width="1500px" height="800px"
+                title="Embedded PDF Document">
+
+            <embed src="Loops.pdf" type="application/pdf" width="1500px" height="800px" title="Embedded PDF Document">
+
+            <embed src="Paying for College Part I.pdf" type="application/pdf" width="1500px" height="800px"
+                title="Embedded PDF Document">
+        </section>
     </section>
 </body>
 
