--- a/pages/resume.html
+++ b/pages/resume.html
@@ -39,7 +39,7 @@
 
         <h1>Resume</h1>
 
-        <div class="box">
+        <div class="box pdf">
 
             <embed src="Gary S Malkasian.pdf" type="application/pdf" width="100%" height="1000px"
                 title="Embedded PDF Document">
