link display changes

--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -191,8 +191,8 @@
                 </div>
                 <div class="box intasc">
                     <h2>Campus Visits</h2>
-                    <p><strong>&nbsp;</strong><strong>Due: Friday, April 4, 2025 at 11:59 pm</strong></p>
-                    <p><strong>&nbsp;</strong>Write a report on your experience visiting college, university, or trade
+                    <p><strong>Due: Friday, April 4, 2025 at 11:59 pm</strong></p>
+                    <p>Write a report on your experience visiting college, university, or trade
                         school campuses.</p>
                     <p>Your report should include this info:</p>
                     <ul>
@@ -239,7 +239,7 @@
                                     <p>Bates Technical College</p>
                                 </td>
                                 <td width="188">
-                                    <p><a href="https://www.batestech.edu/">https://www.batestech.edu/</a></p>
+                                    <p><a href="https://www.batestech.edu/" target="_blank">https://www.batestech.edu/</a></p>
                                 </td>
                                 <td width="69">
                                     <p>Tacoma</p>
@@ -250,7 +250,7 @@
                                     <p>Clover Park Technical College</p>
                                 </td>
                                 <td>
-                                    <p><a href="https://www.cptc.edu/">https://www.cptc.edu/</a></p>
+                                    <p><a href="https://www.cptc.edu/" target="_blank">https://www.cptc.edu/</a></p>
                                 </td>
                                 <td>
                                     <p>Puyallup</p>
@@ -261,7 +261,7 @@
                                     <p>Green River College</p>
                                 </td>
                                 <td>
-                                    <p><a href="https://www.greenriver.edu/">https://www.greenriver.edu/</a></p>
+                                    <p><a href="https://www.greenriver.edu/" target="_blank">https://www.greenriver.edu/</a></p>
                                 </td>
                                 <td>
                                     <p>Auburn</p>
@@ -272,7 +272,7 @@
                                     <p>Lake Washington Institute of Technology</p>
                                 </td>
                                 <td>
-                                    <p><a href="http://www.lwtech.edu/">http://www.lwtech.edu</a></p>
+                                    <p><a href="http://www.lwtech.edu/" target="_blank">http://www.lwtech.edu</a></p>
                                 </td>
                                 <td>
                                     <p>Bothell</p>
@@ -283,7 +283,7 @@
                                     <p>Pima Medical Institute</p>
                                 </td>
                                 <td>
-                                    <p><a href="https://pmi.edu/">https://pmi.edu/</a></p>
+                                    <p><a href="https://pmi.edu/" target="_blank">https://pmi.edu/</a></p>
                                 </td>
                                 <td>
                                     <p>Seattle</p>
@@ -294,7 +294,7 @@
                                     <p>Renton Technical College</p>
                                 </td>
                                 <td>
-                                    <p><a href="https://rtc.edu/">https://rtc.edu/</a></p>
+                                    <p><a href="https://rtc.edu/" target="_blank">https://rtc.edu/</a></p>
                                 </td>
                                 <td>
                                     <p>Renton</p>
