--- a/intasc/intasc4.html
+++ b/intasc/intasc4.html
@@ -57,14 +57,14 @@
                     I'm teaching it now, Summer 2025, as I'm creating this portfolio. My students are required to create
                     a website as their final project for the quarter, so it's been fun to show them my final project as
                     I'm creating it. My students have access to the source code: <a
-                        href="https://github.com/GaryMalk/portfolio" target="_blank"
-                        rel="noopener">https://github.com/GaryMalk/portfolio</a>&nbsp;</li>
+                        href="https://github.com/GaryMalk/portfolio"
+                        target="_blank">https://github.com/GaryMalk/portfolio</a>&nbsp;</li>
                 <li>The CS Toolkit I created as an assignment for the CWU MAT tech class: <a
-                        href="https://garymalk.github.io/CSToolkit" target="_blank"
-                        rel="noopener">https://garymalk.github.io/CSToolkit</a>. Again, written by hand, with special
+                        href="https://garymalk.github.io/CSToolkit"
+                        target="_blank">https://garymalk.github.io/CSToolkit</a>. Again, written by hand, with special
                     care to make the whole site demonstrable of the coding techniques I teach my students in the HTML
                     class. Students have access to the source code: <a href="https://github.com/GaryMalk/CSD112"
-                        target="_blank" rel="noopener">https://github.com/GaryMalk/CSD112</a></li>
+                        target="_blank">https://github.com/GaryMalk/CSD112</a></li>
                 <li>History of Computer Science PowerPoint presentation saved as a PDF</li>
                 <li>Programming Loops and Counters PowerPoint presentation saved as a PDF</li>
                 <li>Personal Finance class: Paying for College unit: Paying for College Part I PowerPoint presentation
